# GeoAI_LandClassifier

./: LICENSE  README.md  app.py  pyproject.toml
