[tool.poetry]
name = "geo_ai"
version = "0.1.0"
description = ""
authors = ["Krunal Shambharkar <krunalss@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "1.34.0"
google-generativeai ="0.5.3"
python-dotenv ="1.0.1"
langchain = "0.1.20"
PyPDF2 ="3.0.1"
pdf2image ="1.17.0"
faiss-cpu ="1.8.0"
langchain-google-genai ="1.0.3"
requests = "2.31.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
